// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivitylogRow should render the component when not beautified 1`] = `
<tr
  className="activitylog-raw"
  key="post1"
>
  <td>
    <MethodLabel
      method="RAW"
    />
  </td>
  <td
    className="color-0"
  >
    anonymous
  </td>
  <td>
    <DescriptionWrapper
      entry={
        Immutable.Map {
          "_id": "post1",
          "semantic": Immutable.Map {
            "action": "RAW",
            "extra": "POST: /api/entities",
          },
          "url": "/api/entities",
          "method": "POST",
          "time": "12345",
        }
      }
      expanded={false}
      toggleExpand={[Function]}
    >
      <span>
        <span
          className="activitylog-extra"
        >
          POST: /api/entities
        </span>
      </span>
    </DescriptionWrapper>
  </td>
  <td
    className="activitylog-time"
  >
    formatted: 12345, with: L (locale: null); formatted: 12345, with: LTS (locale: en);
  </td>
</tr>
`;

exports[`ActivitylogRow when beautified should render the componet for the different actions 1`] = `
<tr
  className="activitylog-beautified"
  key="post1"
>
  <td>
    <MethodLabel
      method="CREATE"
    />
  </td>
  <td
    className=""
  >
    defined user
  </td>
  <td>
    <DescriptionWrapper
      entry={
        Immutable.Map {
          "_id": "post1",
          "semantic": Immutable.Map {
            "beautified": true,
            "description": "descrip",
            "name": "name",
            "extra": "extra",
            "action": "CREATE",
          },
          "url": "/api/entities",
          "method": "POST",
          "time": "54321",
          "username": "defined user",
        }
      }
      expanded={false}
      toggleExpand={[Function]}
    >
      <span>
        <span
          className="activitylog-prefix"
        >
          <Connect(Translate)>
            descrip
          </Connect(Translate)>
        </span>
        <span
          className="activitylog-name"
        >
          name
        </span>
        <span
          className="activitylog-extra"
        >
          extra
        </span>
      </span>
    </DescriptionWrapper>
  </td>
  <td
    className="activitylog-time"
  >
    formatted: 54321, with: L (locale: null); formatted: 54321, with: LTS (locale: en);
  </td>
</tr>
`;

exports[`ActivitylogRow when beautified should render the componet for the different actions 2`] = `
<tr
  className="activitylog-beautified"
  key="post1"
>
  <td>
    <MethodLabel
      method="UPDATE"
    />
  </td>
  <td
    className=""
  >
    defined user
  </td>
  <td>
    <DescriptionWrapper
      entry={
        Immutable.Map {
          "_id": "post1",
          "semantic": Immutable.Map {
            "beautified": true,
            "description": "descrip",
            "name": "name",
            "extra": "extra",
            "action": "UPDATE",
          },
          "url": "/api/entities",
          "method": "POST",
          "time": "54321",
          "username": "defined user",
        }
      }
      expanded={false}
      toggleExpand={[Function]}
    >
      <span>
        <span
          className="activitylog-prefix"
        >
          <Connect(Translate)>
            descrip
          </Connect(Translate)>
        </span>
        <span
          className="activitylog-name"
        >
          name
        </span>
        <span
          className="activitylog-extra"
        >
          extra
        </span>
      </span>
    </DescriptionWrapper>
  </td>
  <td
    className="activitylog-time"
  >
    formatted: 54321, with: L (locale: null); formatted: 54321, with: LTS (locale: en);
  </td>
</tr>
`;

exports[`ActivitylogRow when beautified should render the componet for the different actions 3`] = `
<tr
  className="activitylog-beautified"
  key="post1"
>
  <td>
    <MethodLabel
      method="DELETE"
    />
  </td>
  <td
    className=""
  >
    defined user
  </td>
  <td>
    <DescriptionWrapper
      entry={
        Immutable.Map {
          "_id": "post1",
          "semantic": Immutable.Map {
            "beautified": true,
            "description": "descrip",
            "name": "name",
            "extra": "extra",
            "action": "DELETE",
          },
          "url": "/api/entities",
          "method": "POST",
          "time": "54321",
          "username": "defined user",
        }
      }
      expanded={false}
      toggleExpand={[Function]}
    >
      <span>
        <span
          className="activitylog-prefix"
        >
          <Connect(Translate)>
            descrip
          </Connect(Translate)>
        </span>
        <span
          className="activitylog-name"
        >
          name
        </span>
        <span
          className="activitylog-extra"
        >
          extra
        </span>
      </span>
    </DescriptionWrapper>
  </td>
  <td
    className="activitylog-time"
  >
    formatted: 54321, with: L (locale: null); formatted: 54321, with: LTS (locale: en);
  </td>
</tr>
`;

exports[`ActivitylogRow when beautified should render the componet for the different actions 4`] = `
<tr
  className="activitylog-beautified"
  key="post1"
>
  <td>
    <MethodLabel
      method="MIGRATE"
    />
  </td>
  <td
    className=""
  >
    defined user
  </td>
  <td>
    <DescriptionWrapper
      entry={
        Immutable.Map {
          "_id": "post1",
          "semantic": Immutable.Map {
            "beautified": true,
            "description": "descrip",
            "name": "name",
            "extra": "extra",
            "action": "MIGRATE",
          },
          "url": "/api/entities",
          "method": "POST",
          "time": "54321",
          "username": "defined user",
        }
      }
      expanded={false}
      toggleExpand={[Function]}
    >
      <span>
        <span
          className="activitylog-prefix"
        >
          <Connect(Translate)>
            descrip
          </Connect(Translate)>
        </span>
        <span
          className="activitylog-name"
        >
          name
        </span>
        <span
          className="activitylog-extra"
        >
          extra
        </span>
      </span>
    </DescriptionWrapper>
  </td>
  <td
    className="activitylog-time"
  >
    formatted: 54321, with: L (locale: null); formatted: 54321, with: LTS (locale: en);
  </td>
</tr>
`;

exports[`ActivitylogRow when beautified should render the componet for the different actions 5`] = `
<tr
  className="activitylog-beautified"
  key="post1"
>
  <td>
    <MethodLabel
      method="CUSTOM"
    />
  </td>
  <td
    className=""
  >
    defined user
  </td>
  <td>
    <DescriptionWrapper
      entry={
        Immutable.Map {
          "_id": "post1",
          "semantic": Immutable.Map {
            "beautified": true,
            "description": "descrip",
            "name": "name",
            "extra": "extra",
            "action": "CUSTOM",
          },
          "url": "/api/entities",
          "method": "POST",
          "time": "54321",
          "username": "defined user",
        }
      }
      expanded={false}
      toggleExpand={[Function]}
    >
      <span>
        <span
          className="activitylog-prefix"
        >
          <Connect(Translate)>
            descrip
          </Connect(Translate)>
        </span>
        <span
          className="activitylog-name"
        >
          name
        </span>
        <span
          className="activitylog-extra"
        >
          extra
        </span>
      </span>
    </DescriptionWrapper>
  </td>
  <td
    className="activitylog-time"
  >
    formatted: 54321, with: L (locale: null); formatted: 54321, with: LTS (locale: en);
  </td>
</tr>
`;
